--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
     "redux-persist": "^6.0.0",
+    "redux-persist-crosstab": "^3.7.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
